    such as cygwin http://www.nntp.perl.org/group/perl.cpan.testers/2007/09/msg630399.html
    current assumption is that it doesn't matter if profiling for 'long enough'.
Add test for throwing an exception in context2edit as way to veto sample - and document
Add tests for set_precondition

disabled should set inuse so the check for disabled can be moved inside the 'already inuse' block

=head2 DashProfiler 1.12 - r48 - Mar 25th 2008

  Fixed period_exclusive sample calculation of overheads.
  Fixed period_sample to be disabled until start_period_sample() called.
  Slight performance boost (0.000015 instead of 0.000017).

=head2 DashProfiler 1.11 - r45 - Mar 24 2008

  Now ~17% faster (cheaper) when using DBI >= 1.603.
  Make tests more robust and work with Perl 5.10.

=head2 DashProfiler 1.09 - r43 - Feb 20 2008

  Added $sample->current_sample_duration method.
  Added $core->period_start_time method.
  Added DashProfiler->profile_names method.
  Added DashProfiler->set_precondition method.
  Added DashProfiler::Core->estimate_sample_overheads.
  Added automatic measurement of sample overhead time.
  Updated DashProfiler::Apache to use set_precondition
    to start sample periods only for initial requests.
  Updated DashProfiler::Apache docs to suggest PerlInitHandler
    instead of PerlPostReadRequestHandler.

=head2 DashProfiler 1.08 - r36 - Sept 11 2007

  Fixed fatal error in visit_profile_nodes() for DBI profiles with no Data.

  Changed propagate_period_count() to not reset period_count.
  Changed to increment period_count in end_sample_period() not start_sample_period().
  Changed start_sample_period() to not call end_sample_period() automatically.
    So now multiple start_sample_period() calls without end_sample_period() calls
    are harmless - the period runs from the most recent start_sample_period() call.

  Added period_strict_start and period_strict_end attributes to control how